Update: Problem 1 complete

--- a/JZ_Homework.tex
+++ b/JZ_Homework.tex
@@ -71,15 +71,15 @@
 
 \begin{itemize}
 	\item[a)] Process the data: turn this event dataset into a matrix.
-	
-	\lstinputlisting[language=R, firstline=1, lastline=1]{JZ_Homework.r}  
-	
 	\item[b)] Specifically, summarize the interactions across all time periods into an adjacency matrix where:
 	\begin{enumerate}
 		\item "1" indicates that $i$ and $j$ had a conflictual interaction sometime during the temporal span of the original dataset and zero otherwise.
 		\item Make sure all actors that existed at any point during the temporal span are included in the adjacency matrix.
 	\end{enumerate}
 \end{itemize}
+
+	\lstinputlisting[language=R, firstline=1, lastline=36]{JZ_Homework.r}  
+
 
 \section{Measurements \& Community Detection}
 
@@ -105,6 +105,16 @@
 	\item[a)] Run a cross-sectional ERGM on the Nigerian conflict network, develop at least one or two network level hypotheses.
 	\item[b)] Briefly discuss the results.
 	\item [c)] Make sure to show that you checked for convergence.
+\end{itemize}
+
+\section{Find your own data}
+
+\begin{itemize}
+	\item[a)] Locate data that relates to your field of interest.
+	\item[b)] Transform the data, or a subset of it into a matrix, and plot (similar to step 1 in Section 1).
+	\item [c)] Include descriptive features in your network graph (similar to step 2, but choose your own measurements).
+	\item [d)] Run a model, it can be any network model from the course but justify your choices! 
+	\item [e)] Discuss the results in a brief write up. Present for 3-5 minutes to the class.
 \end{itemize}
 
 %\begin{figure}[H]
