--- a/JZ_Homework.tex
+++ b/JZ_Homework.tex
@@ -153,6 +153,6 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 	\item [e)] Discuss the results in a brief write up. Present for 3-5 minutes to the class.
 \end{itemize}
 
-%\lstinputlisting[language=R, firstline=1,lastline=400]{JZ_BITs.r}  
+\lstinputlisting[language=R, firstline=26,lastline=400]{JZ_BITs.r}  
 
 \end{document}
