--- a/presentation/networkPresentationJZ.tex
+++ b/presentation/networkPresentationJZ.tex
@@ -145,7 +145,7 @@ bg= white}
 \begin{lstlisting}[language=R]
 # show biggest "suers" (origin country of plantiff)
 head(sort(rowSums(BITadjMatTotalMatrix), decreasing = T))
-# show biggest violators (countries that pass potentiall expropriating policies)
+# show biggest violators (countries that pass potentially expropriating policies)
 head(sort(colSums(BITadjMatTotalMatrix), decreasing = T))
 \end{lstlisting}
 
@@ -158,7 +158,7 @@ Argentina Netherlands Ecuador Germany Czechslovakia Italy
 \end{verbatim}
 \end{frame}
 
-\begin{frame}{\large Empirically, democracies sign, and violate, investment treaties more frequently (and importantly, more disproportionately).}
+\begin{frame}{\large Empirically, democracies sign and violate, investment treaties more frequently (and importantly, more disproportionately).}
 
 \includegraphics[width=.49\linewidth]{figures/histSignRegimeType.pdf}
 \includegraphics[width=.49\linewidth]{figures/histViolationRegimeType.pdf}
@@ -178,7 +178,7 @@ Argentina Netherlands Ecuador Germany Czechslovakia Italy
 \end{center}
 \end{frame}
 
-\begin{frame}{\large Governments in general, are more likely to pass expropriating policies (i.e. violate BIT) when they soon face credible elections.}
+\begin{frame}{\large Governments, in general, are more likely to pass expropriating policies (i.e. violate BIT) when they soon face credible elections.}
 
 \includegraphics[width=.49\linewidth]{figures/polity2Effect.pdf}
 \includegraphics[width=.49\linewidth]{figures/timeUntilAnyElecEffect.pdf}
@@ -186,7 +186,7 @@ Argentina Netherlands Ecuador Germany Czechslovakia Italy
 \setbeamercovered{invisible}
 \begin{center}
 	\pause
-	{Maybe arbitration timing is strategic (i.e. $\rightarrow$ elections), and litigation is driven by the relationship between the two countries involved in the treaty?}
+	{Maybe arbitration timing is strategic (i.e. as $t \rightarrow$ elections), and litigation is driven by the relationship between the two countries involved in the treaty?}
 \end{center}
 \end{frame}
 
